fix homepage text overflow problem

--- a/src/css/layouts/pages/front-page.scss
+++ b/src/css/layouts/pages/front-page.scss
@@ -60,9 +60,6 @@ section.homepage-section {
       bottom: 0.5rem;
       left: 0.5rem;
       max-width: 10ch;
-      overflow-wrap: break-word;
-      -webkit-hyphens: auto;
-      hyphens: auto;
     }
   }
 
